k8s/services.yaml
# ----------- MySQL (ClusterIP, internal only) -------------
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector: { app: mysql }
  ports:
    - port: 3306
      targetPort: 3306
# ----------- Backend (Flask API) --------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector: { app: backend }
  ports:
    - port: 5001
      targetPort: 5001
# ----------- Front-end (Vue static site) -----------------
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
# ----------- phpMyAdmin ----------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  selector: { app: phpmyadmin }
  ports:
    - port: 8081
      targetPort: 80
# # ----------- Prometheus ----------------------------------
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: prometheus
# spec:
#   selector: { app: prometheus }
#   ports:
#     - port: 9090
#       targetPort: 9090
# # ----------- Grafana -------------------------------------
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: grafana
# spec:
#   selector: { app: grafana }
#   ports:
#     - port: 3000
#       targetPort: 3000
