k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: { number: 80 }

          # - path: /api/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend
          #       port: { number: 5001 }

          # - path: /grafana/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: grafana
          #       port: { number: 3000 }

          # - path: /prometheus/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: prometheus
          #       port: { number: 9090 }
